--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
 <body>
   <h1>Bem-vindo à área restrita</h1>
   <button onclick="logout()">Sair</button>
+  <button onclick="logout()">Sair</button>
+<button onclick="salvarNoFirestore(coletarDadosFormulario())">Salvar Avaliação</button>
+
 
   <!-- Firebase App e Auth -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -40,3 +43,4 @@
   </script>
 </body>
 </html>
+
