--- a/index.html
+++ b/index.html
@@ -6,15 +6,30 @@
 </head>
 <body>
   <h2>Login</h2>
-  <input type="email" id="email" placeholder="Email" required />
-  <input type="password" id="password" placeholder="Senha" required />
+  <input type="email" id="email" placeholder="Email" />
+  <input type="password" id="password" placeholder="Senha" />
   <button onclick="login()">Entrar</button>
-  <p id="loginError" style="color: red;"></p>
 
-  <!-- Firebase compatível com auth -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-  <script type="module" src="./firebase-config.js"></script>
-  <script type="module" src="./script.js"></script>
+  <!-- Firebase App + Auth -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAh4cDk7h-x0IekJyQEvP4FUbHds6z7Dtc",
+      authDomain: "passagem-plantao2025.firebaseapp.com",
+      projectId: "passagem-plantao2025"
+    };
+    firebase.initializeApp(firebaseConfig);
+
+    function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      firebase.auth().signInWithEmailAndPassword(email, password)
+        .then(() => {
+          window.location.href = "home.html";
+        })
+        .catch(error => alert("Erro no login: " + error.message));
+    }
+  </script>
 </body>
 </html>
