--- a/index.html
+++ b/index.html
@@ -2,34 +2,36 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Login</title>
+  <title>Login - Prontuário Eletrônico</title>
 </head>
 <body>
-  <h2>Login</h2>
-  <input type="email" id="email" placeholder="Email" />
+  <h1>Login</h1>
+  <input type="email" id="email" placeholder="E-mail" />
   <input type="password" id="password" placeholder="Senha" />
   <button onclick="login()">Entrar</button>
+  <p id="errorMsg" style="color: red;"></p>
 
-  <!-- Firebase App + Auth -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyAh4cDk7h-x0IekJyQEvP4FUbHds6z7Dtc",
-      authDomain: "passagem-plantao2025.firebaseapp.com",
-      projectId: "passagem-plantao2025"
-    };
-    firebase.initializeApp(firebaseConfig);
+  <script type="module">
+    import app from './firebase-config.js';
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
 
-    function login() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      firebase.auth().signInWithEmailAndPassword(email, password)
-        .then(() => {
-          window.location.href = "home.html";
-        })
-        .catch(error => alert("Erro no login: " + error.message));
+    const auth = getAuth(app);
+
+    async function login() {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        window.location.href = "home.html";
+      } catch (e) {
+        document.getElementById('errorMsg').innerText = "Erro: " + e.message;
+      }
     }
+
+    // Se já estiver logado, redireciona direto
+    onAuthStateChanged(auth, user => {
+      if (user) window.location.href = "home.html";
+    });
   </script>
 </body>
 </html>
